works on upper board

--- a/board.html
+++ b/board.html
@@ -15,13 +15,37 @@
 
   <tr>
     <td>Ones</td>
-    <td>iajsdoiajsdoajs</td>
+    <td>Sum of all the ones rolled</td>
     <td></td>
   </tr>
 
   <tr>
+    <td>Twos</td>
+    <td>Sum of all the twos rolled</td>
     <td></td>
+  </tr>
+
+  <tr>
+    <td>Threes</td>
+    <td>Sum of all the threes rolled</td>
     <td></td>
+  </tr>
+
+  <tr>
+    <td>Fours</td>
+    <td>Sum of all the fours rolled</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Fives</td>
+    <td>Sum of all the fives rolled</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Sixes</td>
+    <td>Sum of all the Sixes rolled</td>
     <td></td>
   </tr>
 
@@ -31,6 +55,6 @@
 
 
 </table>
-
+<br><br><br><br><br><br>
 <button id="roll-btn">Roll</button>
 </body>
