--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
 <body>
 <h4 id="headline">Yahtzee</h4>
 
-<table id="lower-scorecard" class="scorecard">
+<table id="upper-scorecard" class="scorecard">
   <tr>
       <th>Roll</th>
       <th>Score</th>
@@ -44,17 +44,30 @@
   </tr>
 
   <tr>
-    <td>Sixes</td>
-    <td>Sum of all the Sixes rolled</td>
+    <td>Sub Total</td>
+    <td>Sum of the above squares</td>
+    <td></td>
+  </tr>
+  
+  <tr>
+    <td>Bonus</td>
+    <td>35 points if above sum is more than 63</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Total</td>
+    <td>Sub Total + Bonus</td>
     <td></td>
   </tr>
 
 </table>
 
-<table id="upper-scorecard" class="scorecard">
+<table id="lower-scorecard" class="scorecard">
 
 
 </table>
 <br><br><br><br><br><br>
+<h3 id="">Total Score: </h3>
 <button id="roll-btn">Roll</button>
 </body>
