--- a/board.html
+++ b/board.html
@@ -6,6 +6,7 @@
 <body>
 <h4 id="headline">Yahtzee</h4>
 
+<h3>Upper Scorecard</h3>
 <table id="upper-scorecard" class="scorecard">
   <tr>
       <th>Roll</th>
@@ -56,18 +57,88 @@
   </tr>
 
   <tr>
-    <td>Total</td>
+    <td>Upper Total</td>
     <td>Sub Total + Bonus</td>
     <td></td>
   </tr>
 
 </table>
-
+<br><br>
+<h3>
 <table id="lower-scorecard" class="scorecard">
 
+ <tr>
+      <th>Roll</th>
+      <th>Score</th>
+      <th>Points</th>
+  </tr>
+  <tr>
+    <td>Three of a Kind</td>
+    <td>Sum of all dice</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Four of a Kind</td>
+    <td>Sum of all dice</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Full House</td>
+    <td>25</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Small Straight</td>
+    <td>30</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Large Straight</td>
+    <td>40</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Yahtzee</td>
+    <td>50</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Chance</td>
+    <td>Sum of all dice</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Lower Total</td>
+    <td>Sum</td>
+    <td></td>
+  </tr>
 
 </table>
 <br><br><br><br><br><br>
-<h3 id="">Total Score: </h3>
+<h3>Total Score</h3>
+<table>
+  <tr>
+    <th>Round</th>
+    <th>Score</th>
+  </tr>
+
+  <tr>
+    <td>Upper Half</td>
+    <td></td>
+  </tr>
+
+  <tr>
+    <td>Lower Half</td>
+    <td></td>
+  </tr>
+
+</table>
 <button id="roll-btn">Roll</button>
 </body>
